Create very first initial base object structure

--- a/src/Bridge.Client/Bridge.Client.csproj
+++ b/src/Bridge.Client/Bridge.Client.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Resource Include="bridge.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
 </Project>
